<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />
    <!-- Login progress -->


    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:hintTextAppearance="@style/hintAppearance">

                    <AutoCompleteTextView
                        android:id="@+id/forpwd_phonenum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="请输入手机号"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:theme="@style/editTextGreen" />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/forpwd_verificationCode_btn"
                        app:counterEnabled="true"
                        app:counterMaxLength="4"
                        app:hintTextAppearance="@style/hintAppearance">

                        <AutoCompleteTextView
                            android:id="@+id/forpwd_verificationCode_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_verificationCode"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:theme="@style/editTextGreen" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/forpwd_verificationCode_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/shape_button_transparent"
                        android:text="@string/action_sendVerificationCode"
                        android:textColor="#fff" />

                </RelativeLayout>

                <Button
                    android:id="@+id/forpwd_verificationCodeSumbit_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_button_transparent"
                    android:text="@string/action_RetrievePassword"
                    android:textColor="#fff" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
