<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cdcdcd"
        android:fadingEdge="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="用户名注册后不可修改，请谨慎选择！"
                android:drawableLeft="@mipmap/publish_reminder"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="5dp"/>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/shape_login_char"
                android:orientation="vertical"
                android:paddingBottom="16dp">


                <LinearLayout
                    android:id="@+id/reg_chart_LinLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:hintTextAppearance="@style/hintAppearance">

                        <AutoCompleteTextView
                            android:id="@+id/reg_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_account"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:theme="@style/editTextGreen" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:hintTextAppearance="@style/hintAppearance">

                        <AutoCompleteTextView
                            android:id="@+id/reg_userphone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="请输入手机号"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:theme="@style/editTextGreen" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:hintTextAppearance="@style/hintAppearance">

                        <EditText
                            android:id="@+id/reg_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_pwd"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:theme="@style/editTextGreen" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:hintTextAppearance="@style/hintAppearance">

                        <EditText
                            android:id="@+id/reg_passwordConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_passwordConfirm"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:theme="@style/editTextGreen" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:hintTextAppearance="@style/hintAppearance">

                        <AutoCompleteTextView
                            android:id="@+id/reg_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="验证码"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:theme="@style/editTextGreen" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <Button
                        android:id="@+id/reg_sumbit_btn"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_button_transparent"
                        android:text="@string/action_to_register"
                        android:textSize="20dp"
                        android:textColor="#fff" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>